--- a/src/main/resources/.h2.server.properties
+++ b/src/main/resources/.h2.server.properties
@@ -1,5 +1,5 @@
 #H2 Server Properties
-#Tue Sep 11 13:17:22 CEST 2018
+#Sun Jan 20 15:57:23 CET 2019
 0=JHipster H2 (Disk)|org.h2.Driver|jdbc\:h2\:file\:./target/h2db/db/rowad|rowad
 webAllowOthers=true
 webPort=8082
